Fix spacing for Password reset form

--- a/ui/src/Common/AuthTemplate/Form/Form.scss
+++ b/ui/src/Common/AuthTemplate/Form/Form.scss
@@ -21,7 +21,7 @@
 	.error-messages {
 		display: flex;
 		flex-direction: column-reverse;
-		height: 2rem;
+		height: 1rem;
 
 		.error-message {
 			margin: 0.5rem 0;
